[package]
name = "arch_repo_builder"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"
git2 = "0.19"
url = "2.5"
tempfile = "3.10"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
crc = "3"
hex = "0.4"
libc = "0.2"
procfs = "0.16"
alpm = "3.0"
rand = "0.8"
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.3"
is-terminal = "0.4.12"
pwd = "1.4.0"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.nix]
version = "0.29"
features = [ "mount", "process", "user" ]

[dependencies.ureq]
version = "2.10"
features = ["json"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

[dependencies.time]
version = "0.3"
features = ["formatting", "macros"]
